# django_todo

./: .gitignore  README.md  manage.py  pyproject.toml  schema.yml
django_todo/: asgi.py  settings.py  urls.py  wsgi.py
django_todo_api/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
django_todo_api/migrations/: 0001_initial.py
